--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,21 @@
 body {
     margin: 0px;
-    background: url(../images/grey_sandbag.png)
+    background: url(../images/grey_sandbag.png);
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+}
+
+h1 {
+    margin-top: 0px;
+    margin-bottom: 22px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    color: #4AAAA5;
+}
+
+hr {
+    height: 2px;
+    background-color: #ddd;
+    border: 1px solid #ddd; 
 }
 
 header {
@@ -24,34 +39,58 @@ li {
 
 a {
     display: block;
-    padding: 8px;
+    padding: 0px 14px 0px 14px;
     color: inherit;
     text-decoration: none;
-    background-color: #ddd
+    font-size: 20px;
 }
 
 nav {
     position: absolute;
     text-align: center;
     width: 75%;
-    margin-left: 75%;
+    margin-left: 63%;
     top: 0px;
-    margin-top: 24px; 
+    margin-top: 26px; 
 }
 
 section {
     clear: both;
+    margin: 40px 24% 40px 24%;  
+    width: 960px;
+    height: 325px;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    padding: 35px 31px 41px 31px;
+    line-height: 30px;
+    font-weight: lighter;
 }
 
+img {
+    float: left;
+    margin-right: 25px;
+}
+
+.sectContent{
+    margin-top: 30px;
+}
+p {
+    margin-left: 5px;
+}
 #navName {
     background-color: #4AAAA5;
     width: 200px;
     padding: 25px 20px 25px 20px;
     margin-top: 0px;
     margin-bottom: 0px;
-    margin-left: 200px;
+    margin-left: 24%;
     text-align: center;
     font-size: 25px;
     font-weight: bold;
     font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+#portNav {
+    border-right: 2px solid #F6F6F6;
+    border-left: 2px solid #F6F6F6;
 }
