--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body {
     background: url(../images/grey_sandbag.png);
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
+    width: 100%;
 }
 
 h1 {
@@ -26,6 +27,15 @@ header {
     box-shadow: 0px 1px .5px grey;
 }
 
+footer  {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #666666;
+    z-index: 2;
+}
+
 ul {
     color: #777777;
     list-style-type: none;
@@ -47,8 +57,7 @@ a {
 
 nav {
     position: absolute;
-    text-align: center;
-    width: 75%;
+    text-align: center; 
     margin-left: 63%;
     top: 0px;
     margin-top: 26px; 
@@ -56,14 +65,17 @@ nav {
 
 section {
     clear: both;
-    margin: 40px 24% 40px 24%;  
+    margin: 1.5% 24% 40px 24%;  
     width: 960px;
-    height: 325px;
+    height: auto;
+    overflow: auto;
     border: 1px solid #ddd;
     background-color: #fff;
     padding: 35px 31px 41px 31px;
     line-height: 30px;
     font-weight: lighter;
+    
+    
 }
 
 img {
@@ -71,12 +83,67 @@ img {
     margin-right: 25px;
 }
 
-.sectContent{
-    margin-top: 30px;
-}
 p {
     margin-left: 5px;
 }
+
+input {
+    box-shadow: 0px .1px .5px grey;
+}
+
+.footText {
+    text-align: center;
+    font-size: 13px;
+    color: rgba(221, 221, 221, 0.438);
+    margin-bottom: 5px;
+    margin-top: 30px;
+}
+
+.footLine {
+    background-color: #4AAAA5;
+    border: none;
+    margin-top: 0px;
+    height: 10px;
+    z-index: 1;
+}
+
+.textInput {
+    margin-bottom: 10px; 
+    width: 98%;
+    height: 20px;
+    border: .5px solid #ddd;
+    box-shadow: 0px 1px .5px grey;
+}
+
+.textSubmit {
+    background-color: #4AAAA5;
+    border: none;
+    color: #FFF;
+    margin-top: 10px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.portImage {
+    margin: 20px 20px 20px 35px;
+    box-shadow: 0px 1px .5px grey;
+    
+}
+.sectContent{
+    margin-top: 27px;
+}
+
+.sectContact {
+    font-size: 20px;
+}
+
+.msg {
+    height: 200px;
+    margin-top: 10px;
+}
+
 #navName {
     background-color: #4AAAA5;
     width: 200px;
