--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0px;
     background: url(../images/grey_sandbag.png);
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #777777;
+    color: #5E7F7E;
     width: 100%;
 }
 
@@ -32,6 +32,7 @@ footer  {
     bottom: 0;
     width: 100%;
     height: 60px;
+    margin-top: 20px;
     background-color: #666666;
     z-index: 2;
 }
@@ -41,6 +42,7 @@ ul {
     list-style-type: none;
     margin: 0px;
     padding: 0px;
+    white-space: nowrap;
 }
 
 li {
@@ -61,12 +63,13 @@ nav {
     margin-left: 63%;
     top: 0px;
     margin-top: 26px; 
+    
 }
 
 section {
     clear: both;
-    margin: 1.5% 24% 40px 24%;  
-    width: 960px;
+    margin: 1.5% 24% 5% 24%;  
+    width: 50%;
     height: auto;
     overflow: auto;
     border: 1px solid #ddd;
@@ -74,13 +77,11 @@ section {
     padding: 35px 31px 41px 31px;
     line-height: 30px;
     font-weight: lighter;
-    
-    
 }
 
 img {
-    float: left;
     margin-right: 25px;
+    float: left;
 }
 
 p {
@@ -113,23 +114,47 @@ input {
     height: 20px;
     border: .5px solid #ddd;
     box-shadow: 0px 1px .5px grey;
+    font-size: 15px;
+    padding: 4px;
 }
 
 .textSubmit {
     background-color: #4AAAA5;
     border: none;
-    color: #FFF;
+    color: black;
     margin-top: 10px;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     font-size: 18px;
+    opacity: 0.6;
+    transition: 0.3s;
+}
+
+
+.show {
+    visibility: visible;
+    animation: fadeIn 1s;
+}
+
+.textSubmit:hover {
+    opacity: 1;
+    color: #FFF;
+}
+
+.profImage {
+    border: 1px solid #ddd;
+    box-shadow: 0px 1px .5px #ddd;
 }
 
 .portImage {
     margin: 20px 20px 20px 35px;
     box-shadow: 0px 1px .5px grey;
-    
+    transition: .3s;
+}
+
+.portImage:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 .sectContent{
     margin-top: 27px;
@@ -142,7 +167,9 @@ input {
 .msg {
     height: 200px;
     margin-top: 10px;
+    resize: none;
 }
+
 
 #navName {
     background-color: #4AAAA5;
