--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@ h1 {
     margin-bottom: 22px;
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: #4AAAA5;
+    font-size: 1.5em;
+    font-weight: 800;
 }
 
 hr {
